--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ body {
 <br> 
 
 <div align="center">
-  <b>¿Me buscaste? ¡Me encontraste! ¡Deja de pedir que yo te busque a ti!.<b>
+  <b>HeyOi! Bienvenido a mi mente, humano!.<b>
 </div>
 
 <br>
@@ -166,7 +166,7 @@ body {
 <br>
 
 <div align="center">
-  <a target="_blank" href= "https://archy-doomer.itch.io/"> Itch.Io </a> 
+  <a target="_blank" href= "https://doomer6699.itch.io/"> Itch.Io </a> 
 </div>
 
 <div align="center">
@@ -174,7 +174,7 @@ body {
 </div>
 
 <div align="center">
-  <a target="_blank" href= "https://twitter.com/archydoomer"> Twitter/X </a> 
+  <a target="_blank" href= "https://x.com/Doomer6699"> Twitter/X </a> 
 </div>
 
 <div align="center">
@@ -295,78 +295,6 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <br>
 
 <div align="center">
-  <div align="center"><h2 class="bloque1"> Aquí puedes encontrar a otras versiones de Doomer</h2></div>
-</div>
-
-<br>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHsLQljOYzNqDmGrEdCCoKIc"> Doomer Juega Videojuegos Flash! </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHtQYIJyjriVVSbdzlcKPUzK"> Zoombertron en Zombotron! </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHsLCbTEFeyhelRXhX5aMIgE"> Doomer En El Mundo OpenSource </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHvzMYt2psHnt_msZy7KOotK"> Doomer Retro </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHv2nIQSi78ltLihzfc5bWPT"> Doomer Fuera de Canon </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHupQpcoLlNqvtpq5xmhSi-k"> DUMER EN MINECRAFT T0</a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHvgN5bDYZYgAoF7e6idPVRn"> Doomer En Minecraft! T1 </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHsuF5Yv8O0WBFS0Y5t8drBZ"> DUMER EN PARADISE! </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHs-xi7KbExsC-7owFr6xxjU"> RARE/HES </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHtj8mPle_-2tqbqfubFNojH"> DOOMER T0</a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHsd8PZFRroGbuolYmsuTIIe"> DUMER T0.5</a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHtkzoBMluhaCiaaZHD2Rk2h"> DUMER T1</a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHu-EalCHTLfgEeqjokuON6C"> DUMER T2</a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHvWhyg-nORHKqL_zbxYIHFi"> DUMER T3</a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHuuUn-iDeYuFUH4sutDGQTA"> DUMER GEEK</a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHuvUJ7YwOCgpmhCNfe_RKf6"> DUMER EN DOOM</a> 
-</div>
-
-<br>
-
-<div align="center">
 <img src="IMG/httkb.png" height="180px" width="180px">
 </div>
 
@@ -395,60 +323,6 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </div>
 
 <br>
-
-<div class="bloque1" align="center"><h1> Video Random </h1></div>
-
-<br>
-
-<div align="center"> 
-
-<video width="200px" height="200px" controls> <source src="VID/LQM.mp4" type="video/mp4">
-  Tu navegador es tan viejo que no lo lee ni Dios
-
-</video>
-
-</div>
-
-<br>
-
-<div align="center"> 
-<b> -------------------------------------------------------
-</b>
-</div>
-
-<div class="bloque1" align="center"><h1> ¡El mas reciente extra especial fin de temporada de Doomer! </h1></div>
-
-<br>
-
-<div align="center">
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/QTqpSKHNcSw?si=JnFU0QJsZejxK2PF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-</div>
-
-<br>
-
-<div align="center"> 
-<b> -------------------------------------------------------
-</b>
-</div>
-
-<div class="bloque1" align="center"><h1> ¡La serie mas reciente! </h1></div>
-
-<br>
-
-<div align="center"> 
-<b> Zoomber-Tron en Zombotron!
-</b>
-</div>
-
-<br>
-
-<div align="center">
-
-<iframe width="360" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?controls=0&amp;list=PLh46r6L9GKHtQYIJyjriVVSbdzlcKPUzK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-</div>
 
 <br>
 
@@ -506,225 +380,6 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </b>
 </div>
 
-<div align="center"><h2 class="bloque1">
-  <b>-Botones para otras paginas-<b>
-</div></h2></div>
-
-<br>
-
-<div align="center">
-
-<form target="_blank" method="get" action="https://youtu.be/HWdKuMJTJ1M">
-
-  <button type="submit">
-
-    <b>Random Button</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<br>
-
-<div align="center">
-
-<form target="_blank" method="get" action="links.html">
-
-  <button type="submit">
-
-    <b>Links</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<br>
-
-<div align="center">
-
-<form target="_blank" method="get" action="aboutme.html">
-
-  <button type="submit">
-
-    <b>About Me!</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<br>
-
-<div align="center">
-
-<form target="_blank" method="get" action="blog.html">
-
-  <button type="submit">
-
-    <b>Blog</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<br>
-
-<div align="center">
-
-<form target="_blank" method="get" action="music.html">
-
-  <button type="submit">
-
-    <b>Las Clasicas De Cajon De Doomer</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<br>
-
-<div align="center">
-
-<form target="_blank" method="get" action="games.html">
-
-  <button type="submit">
-
-    <b>Videojuegos creados por Doomer!</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<br>
-
-<div align="center">
-
-<form target="_blank" method="get" action="fs.html">
-
-  <button type="submit">
-
-    <b>Free Software</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<br>
-
-<div align="center">
-
-<form target="_blank" method="get" action="meme.html">
-
-  <button type="submit">
-
-    <b>Doritos Pablo Memes</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<br>
-
-<div align="center">
-
-<form target="_blank" method="get" action="download.html">
-
-  <button type="submit">
-
-    <b>Descargas Directas</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<br>
-
-<div align="center">
-
-<form method="get" action="8bits.html">
-
-  <button type="submit">
-
-    <b>Doomer In 8 Bits</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<br>
-
-<div align="center">
-
-<form target="_blank" method="get" action="doom.html">
-
-  <button type="submit">
-
-    <b>Doom Master Edition By GEC</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<br>
-
-<div align="center">
-
-<form target="_blank" method="get" action="flashteca.html">
-
-  <button type="submit">
-
-    <b>FlashTeca De Doomer</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<br>
-
-<div align="center">
-
-<form target="_blank" method="get" action="https://youtu.be/9NcPvmk4vfo">
-
-  <button type="submit">
-
-    <b>¡¿?!</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<div align="center"> 
-<b> -------------------------------------------------------
-</b>
-</div>
-
-<br>
-
 <div align="center">
 
 <div class="tiktok" align="center"> 
@@ -742,11 +397,6 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
-<div align="center"> 
-<b> -------------------------------------------------------
-</b>
-</div>
-
 <br>
 
 <div align="center">
@@ -763,7 +413,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <br>
 
 <div class="bloque1" align="center"> 
-<b> Canales Con Calidad Media Baja!
+<b> Canales Legendarios!
 </b>
 </div>
 
@@ -786,14 +436,6 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
   <a target="_blank" href= "https://www.youtube.com/@CatAnimates/videos"> CatAnimates </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/@deihanney"> Elaine IA </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/@arylopez29"> Morita Matrioshka </a> 
 </div>
 
 <!-- Aquí es donde puedes dejarme tus comentarios! -->
@@ -840,7 +482,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
   <b>Only quality trash since 2018.</b>
 
 <div align="center">
-  <b> <a target="_blank" href="banana.html">-DOOMER6699-</a> <b>
+  <b> <a>-DOOMER6699-</a> <b>
 
 </div>
 
