--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ body {
 <b>Ahora a todo color y con bajo presupuesto la pagina del canal <a target="_blank" href= "https://www.youtube.com/@Doomer6699/streams"> @Doomer6699 </a> a llegado! 
 creada en lenguaje HTML5 y poco, pero muy muy muy poco de CSS, dentro de los servidores de GitHub! (dios bendiga GH)
 <br>
-Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para todo aquel que quiera enterarse del Lore del universo ARCHYDoomer, de los futuros proyectos como los videojuegos o especiales en directo o simplemente para ver mi poca estabilidad mental desaparecer dia a dia en los post que subire a manera de blog!
+Con una estética de página de los años 2000/90, esta web está disponible para cualquiera que quiera conocer el lore del universo ARCHYDoomer, enterarse de futuros proyectos como los videojuegos creados por Doomer, o simplemente observar cómo mi escasa estabilidad mental se desvanece día a día.
 </b>
 </div>
 
@@ -324,19 +324,12 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
-<br>
-
-<div align="center"> 
-<b> -------------------------------------------------------
-</b>
-</div>
-
 <div class="bloque1" align="center"><h1> ¡Noticias! </h1></div>
 
 <br>
 
 <div align="center"> 
-<b> No hay muchas nuevas noticias... SOLO UN NUEVO JUEGO GRATUTIO CREADO POR DOOMER!
+<b> No hay muchas nuevas noticias... SOLO UN NUEVO JUEGO GRATUTIO CREADO POR DOOMER! LD's ZOMBIE The Game!
 </b>
 </div>
 
