--- a/index.html
+++ b/index.html
@@ -26,27 +26,25 @@ body {
   </style>
 
 <style type="text/css">
-    .Titulo { 
-          margin: 0px;
-          font-family: "Optima";
-          color: red; 
-          font-size: 50px;
-          text-align: center;
-          background-image: url(IMG/black.jpg);
-          background-size: cover;
-          padding: 3px 10px;
-          border: white 5px solid;
-          background-attachment: fixed;
-          position: fixed;
-          height: 60px;
-          width: 100%; 
-          left: 100; 
-          right: 100;
-          top: 100; 
-          position: fixed; 
-          display: block;
-
-  }
+        /* Título principal */
+        .Titulo { 
+            margin: 0;
+            font-family: "Optima", sans-serif;
+            color: red; 
+            font-size: 50px;
+            background-image: url('IMG/black.jpg');
+            background-size: cover;
+            padding: 10px 20px;
+            border: 5px solid white;
+            position: fixed;
+            top: 0;
+            width: 100%; 
+            height: 60px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
   </style>
 
 <style type="text/css">
