--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body {
 
 <!-- CSS Block End -->
 
-<div align="center"><h1 class="Titulo"> DOOMER6699 </h1></div>
+<div align="center"><h1 class="Titulo"> DISCCO-NEKTTED </h1></div>
 
 <!-- Hum... Con que sabes de F12... -->
 
@@ -134,7 +134,7 @@ body {
 <br>
 <br>    
 
-<div align="center"><h2 class="bloque1"> Archivos MP4 Con Carácter Humorístico/@Doomer6699 </h2></div>
+<div align="center"><h2 class="bloque1">Archivos MP4 Con Carácter Humorístico / @Discco-Nektted</h2></div>
 
 <br>
 
@@ -168,27 +168,27 @@ body {
 </div>
 
 <div align="center">
-  <a target="_blank" href= "https://www.youtube.com/c/ArchivosMP4ConCaracterHumoristico/featured"> YouTube </a>
+  <a target="_blank" href= "https://www.youtube.com/@Discco-Nektted/videos"> YouTube </a>
 </div>
 
 <div align="center">
-  <a target="_blank" href= "https://x.com/Doomer6699"> Twitter/X </a> 
+  <a target="_blank" href= "https://x.com/Discco_Nektted"> Twitter/X </a> 
 </div>
 
 <div align="center">
   <a target="_blank" href= "https://www.instagram.com/doomer6699/"> Instagram </a> 
 </div>
 
-<div align="center">
+<!-- <div align="center">
   <a target="_blank" href= "https://www.doomworld.com/profile/34949-doomguykiller69/"> Doom World </a> 
-</div>
+</div> -->
 
-<div align="center">
+<!-- <div align="center">
   <a target="_blank" href= "https://www.facebook.com/profile.php?id=100088833919535"> Facebook </a> 
-</div>
+</div> -->
 
 <div align="center">
-  <a target="_blank" href= "https://www.reddit.com/user/Doomguykiller69"> Reddit </a> 
+  <a target="_blank" href= "https://www.reddit.com/user/Doomguykiller69/"> Reddit </a> 
 </div>
 
 <div align="center">
@@ -211,9 +211,9 @@ body {
   <a target="_blank" href= "https://www.tiktok.com/@doomer6699"> TikTok </a> 
 </div>
 
-<div align="center">
+<!-- <div align="center">
   <a target="_blank" href= "https://www.facebook.com/groups/doomer6699grupooficial"> Grupo De Facebook </a> 
-</div>
+</div> -->
 
 <br>
 
@@ -232,7 +232,7 @@ body {
 <div align="center"><h3 class="bloque2"> 28 de Diciembre del año 2022 </h3></div>
 
 <div align="center"> 
-<b>Ahora a todo color y con bajo presupuesto la pagina del canal <a target="_blank" href= "https://www.youtube.com/@Doomer6699/streams"> @Doomer6699 </a> a llegado! 
+<b>Ahora a todo color y con bajo presupuesto la pagina del canal <a target="_blank" href= "https://www.youtube.com/@Discco-Nektted/videos"> @Doomer6699 </a> a llegado! 
 creada en lenguaje HTML5 y poco, pero muy muy muy poco de CSS, dentro de los servidores de GitHub! (dios bendiga GH)
 <br>
 Con una estética de página de los años 2000/90, esta web está disponible para cualquiera que quiera conocer el lore del universo ARCHYDoomer, enterarse de futuros proyectos como los videojuegos creados por Doomer, o simplemente observar cómo mi escasa estabilidad mental se desvanece día a día.
@@ -252,22 +252,10 @@ Con una estética de página de los años 2000/90, esta web está disponible par
 </b>
 </div>
 
-<div align="center"><h2 class="bloque1"> Otros Canales De Doomer </h2></div>
+<div align="center"><h2 class="bloque1"> Otros Canales De Discco </h2></div>
 
 <div align="center">
   <a target="_blank" href= "https://www.youtube.com/@losdeaths"> Los Deaths! La mejor banda Rock Electronica de su Tierra! </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/@archivosjpgconcaracterserio"> Archivos JPG Con Carácter Serio </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/@ArchyMP4"> Archivos MP4 Con Carácter Humorístico </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/@cutecatsbaby3081"> Cute Cats Baby</a> 
 </div>
 
 <div align="center"> 
@@ -327,7 +315,7 @@ Con una estética de página de los años 2000/90, esta web está disponible par
 <br>
 
 <div align="center"> 
-<b> No hay muchas nuevas noticias... SOLO UN NUEVO JUEGO GRATUTIO CREADO POR DOOMER! LD's ZOMBIE The Game!
+<b> No hay muchas nuevas noticias... SOLO UN NUEVO JUEGO GRATUTIO CREADO POR DISCCO! LD's ZOMBIE The Game!
 </b>
 </div>
 
@@ -473,7 +461,7 @@ Con una estética de página de los años 2000/90, esta web está disponible par
   <b>Only quality trash since 2018.</b>
 
 <div align="center">
-  <b> <a>-DOOMER6699-</a> <b>
+  <b> <a>-Discco-Nektted-</a> <b>
 
 </div>
 
