--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ body {
 </div>
 
 <div align="center">
-  <a target="_blank" href= "https://www.tiktok.com/@doomer6699"> TikTok </a> 
+  <a target="_blank" href= "https://www.tiktok.com/@discconektted"> TikTok </a> 
 </div>
 
 <!-- <div align="center">
